--- a/DOCKER/nginx/conf/nginx/hosts/mysite.local.conf
+++ b/DOCKER/nginx/conf/nginx/hosts/mysite.local.conf
@@ -5,7 +5,7 @@ server {
     server_name mysite.local;
 
     # задаём корневую директорию
-    root /var/www/mysite.local/public;
+    root /var/www/mysite.local/laravel/public;
 
     # стартовый файл
     index index.php index.html;
