--- a/DOCKER/php/conf/xdebug.ini
+++ b/DOCKER/php/conf/xdebug.ini
@@ -1,6 +1,5 @@
 zend_extension=xdebug.so
 #extension=/usr/local/bin/php/extensions/no-debug-non-zts-20190902/xdebug.so
-xdebug.remote_enable=1
-xdebug.remote_host=172.10.0.1
-xdebug.remote_port=9000
-xdebug.idekey=PHPSTORM
+xdebug.mode=debug
+xdebug.client_host=172.10.0.1
+xdebug.client_port=9003
